# mechArm_Skills_ROS2

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: Einzelteil_Zufuehren.launch.py  fixed_move_to_object.launch.py  mecharm_skills.launch.py  mqtt_sensor.launch.py  test_move_to_object.launch.py
scripts/: Skill_server  main_node.py
scripts/mecharm_skills/: main_node.py  mqtt_client  mqtt_client.py
scripts/mecharm_skills/skills/: fixed_move_to_object.py
scripts/skills/: locate_object.py  move_to_object.py
