<?xml version="1.0"?>
<package format="3">
  <!-- Paket-Metadaten -->
  <name>mecharm_skills</name>
  <version>0.1.0</version>
  <description>
    ROS 2–Package zur Orchestrierung von MechArm-Skills und als MQTT-Capability-Client.
  </description>
  <maintainer email="wolf_antonia@gmx.de">Dein Name</maintainer>
  <license>MIT</license>

  <!-- Buildsystem -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 2–Laufzeitabhängigkeiten -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <!-- Externe Python-Libs (installiere sie per pip3 install paho-mqtt pymycobot) -->
  <exec_depend>paho-mqtt</exec_depend>
  <exec_depend>pymycobot</exec_depend>

  <!-- Für ament_python -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
